@@ -941,6 +941,10 @@ Release 2.7.1 - 2015-07-06
 
     HDFS-8435. Support CreateFlag in WebHDFS. (Jakob Homan via cdouglas)
 
+    HDFS-7766. Add a flag to WebHDFS op=CREATE to not respond with a 307 redirect
+    Altiscale Proprietary feature for now. Please do not use (in case we drop
+    support for this later). (Ravi Prakash)
+
   OPTIMIZATIONS
 
   BUG FIXES
